fix image size alignment

--- a/src/main/asciidoc/white_course.css
+++ b/src/main/asciidoc/white_course.css
@@ -726,3 +726,7 @@ section.title {
   display: block;
   max-width: 100%;
 }
+
+.replication .imageblock img{
+  max-width: 990px;
+}
